# QPrompt-Studio

./: .gitignore  .gitmodules  CMakeLists.txt  QPromptStudio.kdev4  README.md
.kdev4/: QPromptStudio.kdev4
src/: CMakeLists.txt  assets.qrc  main.cpp  qtquickcontrols2.conf  resources.qrc
src/dockwidgets/: MaterialSeparator.qml  materialseparator_qtquick.cpp  materialseparator_qtquick.h
src/qml/: Blank.qml  DockWidget.qml  EditorToolbar.qml  Find.qml  MainMenuBar.qml  MaterialTitlebar.qml  PrompterPage.qml  Test.qml  main.qml
